--- a/scss/_officers.scss
+++ b/scss/_officers.scss
@@ -3,12 +3,18 @@
   img {
     margin-top: 1rem;
     object-fit: cover;
-    border-radius:50%;
+    border-radius: 50%;
     width: 200px;
     height: 200px;
   }
   @media(max-width: 768px) {    
     padding-bottom: 0rem;
+    margin-bottom: 0rem;
+    img {
+      margin-top: 0rem;
+      width: 175px;
+      height: 175px;
+    }
   }
   .not-shown {
       display: none;
